Rebuilt the project from the bottom up to get Jersey 2.7 working. Replaced @Autowired with @Inject Replacex sprint context xml files with Java configs