@@ -19,8 +19,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.plos</groupId>
   <artifactId>content-repo</artifactId>
@@ -44,62 +43,113 @@
     <buildDate>${maven.build.timestamp}</buildDate>
     <java-version>1.7</java-version>
     <org.springframework-version>3.2.2.RELEASE</org.springframework-version>
-    <org.aspectj-version>1.6.9</org.aspectj-version>
     <org.slf4j-version>1.5.10</org.slf4j-version>
-    <rhombat.version>1.0.0-BUILD-SNAPSHOT</rhombat.version>
-    <conf-helper.version>2.2.1</conf-helper.version>
-    <filestore.version>1.0.1</filestore.version>
-    <camel.version>2.10.4</camel.version>
-    <activemq.version>5.2.0</activemq.version>
+    <org.glassfish.jersey-version>2.7</org.glassfish.jersey-version>
   </properties>
 
-  <distributionManagement>
-  </distributionManagement>
-
   <dependencies>
-
-    <!-- General-use libraries -->
     <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.4</version>
+      <groupId>org.glassfish.jersey.containers</groupId>
+      <artifactId>jersey-container-servlet</artifactId>
+      <version>${org.glassfish.jersey-version}</version>
     </dependency>
 
     <dependency>
-      <groupId>commons-configuration</groupId>
-      <artifactId>commons-configuration</artifactId>
-      <version>1.6</version>
-    </dependency>
-
-    <dependency> <!-- It is important we get version 3.x to match commons-configuration -->
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <version>3.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.2.1</version>
-      <!-- makesure correct version here -->
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${org.springframework-version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <!-- Exclude Commons Logging in favor of SLF4j -->
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
-      <groupId>taglibs</groupId>
-      <artifactId>standard</artifactId>
-      <version>1.1.2</version>
+      <groupId>org.glassfish.jersey.ext</groupId>
+      <artifactId>jersey-spring3</artifactId>
+      <version>${org.glassfish.jersey-version}</version>
     </dependency>
 
     <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-moxy</artifactId>
+      <version>${org.glassfish.jersey-version}</version>
     </dependency>
 
     <dependency>
-      <groupId>xerces</groupId>
-      <artifactId>xercesImpl</artifactId>
-      <version>2.11.0</version>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-multipart</artifactId>
+      <version>${org.glassfish.jersey-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+      <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+      <version>${org.glassfish.jersey-version}</version>
+    </dependency>
+
+    <!--
+    This needs to be added back for the unit tests to pass when using
+    springmvc and tomcat in the unit tests. Perhaps it will be easier
+    when we move to jersey
+    http://jira.codehaus.org/browse/MOJO-1076
+                                              -->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.tomcat</groupId>-->
+      <!--<artifactId>catalina</artifactId>-->
+      <!--<version>6.0.29</version>-->
+    <!--</dependency>-->
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk</artifactId>
+      <version>1.7.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.guba</groupId>
+      <artifactId>mogileFS-client</artifactId>
+      <version>1.1.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.12</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-jdbc</artifactId>
+      <version>8.0.5</version>
     </dependency>
 
     <dependency>
@@ -112,178 +162,6 @@
       <artifactId>gson</artifactId>
       <version>2.2.2</version>
       <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.guba</groupId>
-      <artifactId>mogileFS-client</artifactId>
-      <version>1.1.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk</artifactId>
-      <version>1.7.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-pool</groupId>
-      <artifactId>commons-pool</artifactId>
-      <version>1.5.4</version>
-      <scope>runtime</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.3.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-core</artifactId>
-      <version>3.5.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-queries</artifactId>
-      <version>3.5.0</version>
-    </dependency>
-
-    <!-- Spring -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>${org.springframework-version}</version>
-      <exclusions>
-        <!-- Exclude Commons Logging in favor of SLF4j -->
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.springframework</groupId>-->
-      <!--<artifactId>spring-web</artifactId>-->
-      <!--<version>${org.springframework-version}</version>-->
-    <!--</dependency>-->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>${org.springframework-version}</version>
-    </dependency>
-
-    <!-- Jersey -->
-    <!--<dependency>-->
-      <!--<groupId>com.sun.jersey</groupId>-->
-      <!--<artifactId>jersey-server</artifactId>-->
-      <!--<version>1.18</version>-->
-    <!--</dependency>-->
-
-    <dependency>
-      <groupId>org.glassfish.jersey.core</groupId>
-      <artifactId>jersey-server</artifactId>
-      <version>2.7</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.glassfish.jersey.containers</groupId>
-      <artifactId>jersey-container-servlet-core</artifactId>
-      <version>2.7</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>org.glassfish.jersey.containers</groupId>
-      <artifactId>jersey-container-servlet</artifactId>
-      <version>2.7</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.glassfish.jersey.test-framework.providers</groupId>
-      <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-      <version>2.7</version>
-    </dependency>
-
-    <!--<dependency>-->
-      <!--<groupId>com.sun.jersey</groupId>-->
-      <!--<artifactId>jersey-json</artifactId>-->
-      <!--<version>1.18</version>-->
-    <!--</dependency>-->
-
-    <dependency>
-      <groupId>org.glassfish.jersey.media</groupId>
-      <artifactId>jersey-media-moxy</artifactId>
-      <version>2.7</version>
-    </dependency>
-
-    <!--<dependency>-->
-      <!--<groupId>com.sun.jersey.contribs</groupId>-->
-      <!--<artifactId>jersey-multipart</artifactId>-->
-      <!--<version>1.18</version>-->
-    <!--</dependency>-->
-
-    <dependency>
-      <groupId>org.glassfish.jersey.media</groupId>
-      <artifactId>jersey-media-multipart</artifactId>
-      <version>2.7</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.glassfish.jersey.media</groupId>
-      <artifactId>jersey-media-json-jackson</artifactId>
-      <version>2.7</version>
-    </dependency>
-
-    <!-- Jersey  Spring -->
-    <dependency>
-
-      <!--<groupId>com.sun.jersey.contribs</groupId>-->
-      <!--<artifactId>jersey-spring</artifactId>-->
-      <!--<version>1.18</version>-->
-
-      <groupId>org.glassfish.jersey.ext</groupId>
-      <artifactId>jersey-spring3</artifactId>
-      <version>2.7</version>
-
-      <!--<exclusions>-->
-        <!--<exclusion>-->
-          <!--<groupId>org.springframework</groupId>-->
-          <!--<artifactId>spring</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-          <!--<groupId>org.springframework</groupId>-->
-          <!--<artifactId>spring-core</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-          <!--<groupId>org.springframework</groupId>-->
-          <!--<artifactId>spring-web</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-          <!--<groupId>org.springframework</groupId>-->
-          <!--<artifactId>spring-beans</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-          <!--<groupId>org.springframework</groupId>-->
-          <!--<artifactId>spring-context</artifactId>-->
-        <!--</exclusion>-->
-      <!--</exclusions>-->
-    </dependency>
-
-
-    <!-- AspectJ -->
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjrt</artifactId>
-      <version>${org.aspectj-version}</version>
     </dependency>
 
     <!-- Logging -->
@@ -331,164 +209,20 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- @Inject -->
-    <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
-      <version>1</version>
-    </dependency>
-
-    <!-- Servlet -->
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.1</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-tx</artifactId>
-      <version>${org.springframework-version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.quartz-scheduler</groupId>
-      <artifactId>quartz</artifactId>
-      <version>1.8.6</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.jayway.jsonpath</groupId>
-      <artifactId>json-path-assert</artifactId>
-      <version>0.8.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>xmlunit</groupId>
-      <artifactId>xmlunit</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.6</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>1.3.9</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>2.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.supercsv</groupId>
-      <artifactId>super-csv</artifactId>
-      <version>2.1.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.thetransactioncompany</groupId>
-      <artifactId>cors-filter</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context-support</artifactId>
-      <version>${org.springframework-version}</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>2.3.1</version>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.12</version>
-    </dependency>
     <!--<dependency>-->
       <!--<groupId>org.springframework</groupId>-->
-      <!--<artifactId>spring-jdbc</artifactId>-->
-      <!--<version>3.2.2.RELEASE</version>-->
+      <!--<artifactId>spring-test</artifactId>-->
+      <!--<version>3.2.3.RELEASE</version>-->
+      <!--<scope>test</scope>-->
     <!--</dependency>-->
-
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-jdbc</artifactId>
-      <version>8.0.5</version>
-    </dependency>
 
     <!--<dependency>-->
-      <!--<groupId>tomcat</groupId>-->
-      <!--<artifactId>catalina</artifactId>-->
-      <!--<version>5.5.23</version>-->
+    <!--<groupId>junit</groupId>-->
+    <!--<artifactId>junit</artifactId>-->
+    <!--<scope>test</scope>-->
     <!--</dependency>-->
-
-
-
-    <!--
-        This needs to be added back for the unit tests to pass when using
-        springmvc and tomcat in the unit tests. Perhaps it will be easier
-        when we move to jersey
-        http://jira.codehaus.org/browse/MOJO-1076
-                                                  -->
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>catalina</artifactId>
-      <version>6.0.29</version>
-    </dependency>
-
-
   </dependencies>
 
-
-  <!--<pluginRepositories>-->
-    <!--<pluginRepository>-->
-      <!--<id>central</id>-->
-      <!--<name>Maven Plugin Repository</name>-->
-      <!--<url>http://repo2.maven.org/maven2</url>-->
-      <!--<layout>default</layout>-->
-      <!--<snapshots>-->
-        <!--<enabled>false</enabled>-->
-      <!--</snapshots>-->
-      <!--<releases>-->
-        <!--<updatePolicy>never</updatePolicy>-->
-      <!--</releases>-->
-    <!--</pluginRepository>-->
-  <!--</pluginRepositories>-->
 
 
   <repositories>
@@ -525,37 +259,16 @@
     </repository>
 
   </repositories>
-  
+
 
   <build>
-    <finalName>${project.name}-${project.version}</finalName>
-
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-
     <plugins>
-      <!--warpath plugin allows us to use warpath dependencies to get transitive dependencies from the war-->
       <plugin>
-        <groupId>org.appfuse</groupId>
-        <artifactId>maven-warpath-plugin</artifactId>
-        <version>2.0</version>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <goals>
-              <goal>add-classes</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.1.1</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>org.glassfish.jersey.examples.helloworld.jaxrs.App</mainClass>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -569,55 +282,6 @@
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
         </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.8</version>
-        <configuration>
-          <argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
-          <parallel>false</parallel>
-          <systemProperties>
-            <property>
-              <name>log4j.configuration</name>
-              <value>file:${project.basedir}/target/test-classes/log4j.xml</value>
-            </property>
-          </systemProperties>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.0-beta-7</version>
-        <configuration>
-          <goals>deploy</goals>
-          <!-- disable site deploy -->
-          <useReleaseProfile>false</useReleaseProfile>
-          <!-- no javadoc and source jars -->
-          <autoVersionSubmodules>true</autoVersionSubmodules>
-          <preparationGoals>clean install</preparationGoals>
-          <arguments>-Ppackages,distribution,release</arguments>
-        </configuration>
-      </plugin>
-
-      <!--<plugin>-->
-        <!--<groupId>org.apache.maven.plugins</groupId>-->
-        <!--<artifactId>maven-surefire-plugin</artifactId>-->
-        <!--<version>2.16</version>-->
-        <!--<configuration>-->
-          <!--<disableXmlReport>true</disableXmlReport>-->
-          <!--<useFile>false</useFile>-->
-        <!--</configuration>-->
-      <!--</plugin>-->
-
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <!--<version>1.2.1</version>-->
-        <!--<configuration>-->
-          <!--<mainClass>org.test.int1.Main</mainClass>-->
-        <!--</configuration>-->
       </plugin>
 
       <plugin>
@@ -638,6 +302,24 @@
       </plugin>
 
     </plugins>
-
   </build>
+
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>xml-maven-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
